<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"

    tools:context=".Activity.IntroActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logo1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logo2"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                style="@android:style/Widget.Button"
                android:layout_margin="35dp"
                android:background="@drawable/bottom_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/get_start"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/loginAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_signin"
                android:textSize="18sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>