<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="15dp"
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/back" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/img" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText

                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_bg"
                android:hint="@string/acc_2"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_bg"
                android:ems="10"
                android:hint="@string/acc_3"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acc_8"
                    android:layout_centerVertical="true"
                    android:alpha="0.7" />
                <TextView
                    android:id="@+id/forgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acc_9"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/acc_4"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acc_5"
                android:textAlignment="center"
                android:textColor="@color/fe_rupp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/fe_rupp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/acc_6"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:background="@color/fe_rupp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/google_login"
                    android:clickable="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/google_icon" />

                <ImageView
                    android:id="@+id/facebook_login"
                    android:clickable="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/facebook_icon" />

                <ImageView
                    android:id="@+id/twitter_login"
                    android:clickable="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/twiter_icon" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

        </LinearLayout>


    </LinearLayout>
        </LinearLayout>
